objects/ssot__PatientMedicationStatement__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__AccountId__c</fullName>
        <label>Account</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__AssertionDateTime__c</fullName>
        <label>Assertion DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__CareObservationId__c</fullName>
        <label>Care Observation</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ClinicalEncounterId__c</fullName>
        <label>Clinical Encounter</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__EndDateTime__c</fullName>
        <label>End DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Patient Medication Statement Id</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__MedicationCodeId__c</fullName>
        <label>Medication Code</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__MedicationDeliverySettingId__c</fullName>
        <label>Medication Delivery Setting</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__MedicationId__c</fullName>
        <label>Medication</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__MedicationReasonCodeId__c</fullName>
        <label>Medication Reason Code</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__MedicationReasonId__c</fullName>
        <label>Medication Reason</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__MedicationReasonObject__c</fullName>
        <label>Medication Reason Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ParentPatientMedicationStatementId__c</fullName>
        <label>Parent Patient Medication Statement</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PatientId__c</fullName>
        <label>Patient</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PatientMedicationProcedureId__c</fullName>
        <label>Patient Medication Procedure</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PreviousPatientMedicationRequestId__c</fullName>
        <label>Previous Patient Medication Request</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__StartDateTime__c</fullName>
        <label>Start DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__StatementSourceId__c</fullName>
        <label>Statement Source</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__StatementSourceObject__c</fullName>
        <label>Statement Source Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__StatusReasonCodeId__c</fullName>
        <label>Status Reason Code</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Status__c</fullName>
        <label>Status</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1716723731190_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PatientMedicationStatement_Medicatio_rel</label>
        <referenceTo>ssot__PatientHealthCondition__dlm</referenceTo>
        <relationshipLabel>PatientMedicationStatement_Medicatio_rel</relationshipLabel>
        <relationshipName>rel_1716723731190_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1716723733136_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PatientMedicationStatement_CareObser_rel</label>
        <referenceTo>ssot__CareObservation__dlm</referenceTo>
        <relationshipLabel>PatientMedicationStatement_CareObser_rel</relationshipLabel>
        <relationshipName>rel_1716723733136_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1716723734516_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PatientMedicationStatement_Medicatio_rel</label>
        <referenceTo>ssot__CodeSetBundle__dlm</referenceTo>
        <relationshipLabel>PatientMedicationStatement_Medicatio_rel</relationshipLabel>
        <relationshipName>rel_1716723734516_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>